# tempo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ENGINEERING.md  LICENSE  README.md  food.md.example  heat.md.example  plan.md.example  preferences.md.example  pyproject.toml  races.md.example  strength.md.example  weight.md.example
.githooks/: README.md  pre-commit
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: COROS.md  DATE_BUCKETING.md  JOURNALING.md  NUTRITION.md  PREFERENCES.md  PRIVACY.md  RASPBERRY_PI.md  SETUP.md  STRENGTH.md  TELEGRAM_BOT.md  WEIGHT.md
launchd/: com.runos.daily.plist  com.runos.telegram-bot.plist  com.tempo.daily.plist  com.tempo.telegram-bot.plist
runos/: __init__.py  cli.py  config.py  db.py  scheduler.py  units.py
tempo/: __init__.py  cli.py  config.py  db.py  scheduler.py  units.py
tests/: conftest.py  garmin_fakes.py  strava_fakes.py  test_analysis_reports.py  test_analyze_cli.py  test_baselines.py  test_bot_agent.py  test_bot_app.py  test_bot_handlers.py  test_bot_sessions.py  test_bot_transcribe.py  test_bucketing.py  test_cli.py  test_config.py  test_context.py  test_coros_connector.py  test_coros_evolab_analysis.py  test_coros_evolab_transform.py  test_coros_wellness_transform.py  test_correlation.py  test_daily_run.py  test_db.py  test_error_handler.py  test_fetch_recent_streams.py  test_fitness.py  test_garmin_cli.py  test_garmin_connector.py  test_garmin_isolation.py  test_heat.py  test_journal_cli.py  test_journal_service.py  test_journal_summary.py  test_load.py  (+28 more)
(+208 files in other folders)
