[project]
name = "runos"
version = "0.1.0"
description = "Personal, local-first training & health data pipeline (Strava + Garmin -> SQLite -> scheduled Claude analysis)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.25.1",
    "pydantic-settings>=2.14.1",
    "stravalib>=2.4",
    "tenacity>=9.1.4",
    "garminconnect>=0.3.3",
    "python-telegram-bot>=22.7",
    "faster-whisper>=1.2.1",
    "claude-agent-sdk>=0.2.87",
]

[project.scripts]
runos = "runos.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runos"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "responses>=0.26.1",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
